- Allow template icons up to 64x64 instead of 60x60 and scale better if too big

KoText:
- Date variables for printing-date, last-modified, and creation-date were
  not loaded correctly.
- Background spellchecking works again
- Fixed crash during background spellchecking (refcounting of formats)
- Fixed race condition during background spellchecking (leading to misplaced red underlines)
- Fixed hyphenation checkbox not correctly set in font dialog
- Fixed wrong hyphenation in many cases, due to wrong word sent to hyphenation engine
- Font dialog usability: turn radiobuttons superscript/subscript into
  checkboxes to make it possible to deactivate both.
- Usability in style dialog: when creating a new style, select it as the
  'next style' for itself (#45868).
- Allow decimal values in "multiply" (proportional) linespacing.
- Fixed wrong left margin on multiline paragraphs with a counter.

KoSpell:
- Improved configure check for libaspell
- Fixed confusion with ispell's dictionaries which made it forget the chosen dictionary (#71002)
- Fixed multiple connections in spell dialog, which made it skip some words (#75532)

KoWMF:
- Fixed infinite loop on invalid WMF file

KoShell:
- Fixed problems (wrong URL etc.) after importing non-native documents (#77574)

Changes after KOffice-1.3-rc1
=============================
KOfficeCore:
- Fixed doc/window association which led to closing all windows when closing only one.

KoText:
- Fixed rare crash when applying a format to a selection
- Fixed painting bug in text view mode (the right side was being erased).
- Fixed saving of left-to-right direction in RTL paragraphs

KOSpell:
- Fixed bug where the dialog wouldn't show the spell client from the config file

Changes after KOffice-1.3-beta4
===============================
KOfficeCore:
- Restart autosave timer when saving
- Fixes for remote documents (authentication dialog not on top, error handling)