@@ -22,6 +22,8 @@ KoText:
 - Background spellchecking works again
 - Fixed crash during background spellchecking (refcounting of formats)
 - Fixed race condition during background spellchecking (leading to misplaced red underlines)
+- Repaint paragraph after bg spell checking, in all cases (errors or not),
+  otherwise newly-added-to-the-dictionary words were still red-underlined (#56506).
 - Fixed hyphenation checkbox not correctly set in font dialog
 - Fixed wrong hyphenation in many cases, due to wrong word sent to hyphenation engine
 - Font dialog usability: turn radiobuttons superscript/subscript into
